@@ -65,6 +65,7 @@ The following bugs are resolved with this release:
   [22918] multiple common of `__nss_shadow_database'
   [22919] sparc32: backtrace yields infinite backtrace with makecontext
   [22926] FTBFS on powerpcspe
+  [22927] libanl: properly cleanup if first helper thread creation failed
   [22932] lt_LT: Update of abbreviated month names from CLDR required
   [22937] Greek (el_GR, el_CY) locales actually need ab_alt_mon
   [22947] FAIL: misc/tst-preadvwritev2
